# warpfield

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: create_pdoc.yaml  publish_conda.yaml  publish_pypi.yml  test.yml
notebooks/: example.ipynb
src/warpfield/: __init__.py  __main__.py  _cupy_utils.py  ndimage.py  register.py  utils.py  warp.py
src/warpfield/recipes/: __init__.py  default.yml  default_opm.yml
tests/: test_all.py
